tests/baselines/reference/symbolProperty47.errors.txt
tests/cases/conformance/es6/Symbols/symbolProperty47.ts(3,9): error TS2322: Type '""' is not assignable to type '数字'.
tests/cases/conformance/es6/Symbols/symbolProperty47.ts(11,1): error TS2322: Type '""' is not assignable to type '数字'.


==== tests/cases/conformance/es6/Symbols/symbolProperty47.ts (2 errors) ====
    class C {
        get [Symbol.hasInstance]() {
            return "";
            ~~~~~~~~~~
!!! error TS2322: Type '""' is not assignable to type '数字'.
        }
        // Should take a string
        set [Symbol.hasInstance](x: number) {
        }
    }
    
    (new C)[Symbol.hasInstance] = 0;
    (new C)[Symbol.hasInstance] = "";
    ~~~~~~~~~~~~~~~~~~~~~~~~~~~
!!! error TS2322: Type '""' is not assignable to type '数字'.